# fastapi-with-front

./: .env  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py
app/api/example/: __init__.py  get_example.py
app/events/: __init__.py  shutdown.py  startup.py
app/middlewares/: __init__.py  auth.py
app/static/: __init__.py  swagger-ui-bundle.js  swagger_ui.py
app/utils/: __init__.py  logger_config.py
